# MedX

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  MEDEX_FINAL.py  MEDX_PUBLIC_RELEASE_REPORT.md  Makefile  README.md  SECURITY.md  alembic.ini  config.py  differential_diagnosis.py  docker-compose.yml  medex_logger.py  medex_rag_adapter.py  medical_ontology.py  medical_rag_sota.py  pyproject.toml  requirements-api.txt  requirements-dev.txt  requirements.txt  run_api.py
.github/workflows/: canary.yml  ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
docs/: ADR-001-real-time-thinking-streaming.md  ARCHITECTURE.md  DEVELOPMENT.md  KNOWLEDGE_BASE_API.md  KNOWLEDGE_BASE_EXPANSION_PLAN.md  MEDEX_V2_ARCHITECTURE.md  ONTOLOGY_REFERENCE.md  STREAMING_THINKING_DECISIONS.md  TECHNICAL_DOCUMENTATION.md  TOOLS_ROADMAP.md
docs/adr/: 0001-reflex-migration.md  0002-agent-architecture.md  0003-chat-tools-removal.md  0004-deep-research-gap-analysis.md  0005-cdr-technology-study-notes.md
knowledge/: __init__.py  category_normalizer.py  conditions_cardiovascular.py  conditions_emergency.py  conditions_endocrine.py  conditions_gastrointestinal.py  conditions_infectious.py  conditions_neurological.py  conditions_psychiatric.py  conditions_respiratory.py  conditions_rheumatologic.py  icd10_catalog.py  medications_database.py  medications_expanded.py
scripts/: canary_check.py  check_infrastructure.py  docker_build.sh  init-db.sql  run_e2e_tests.sh  test_all_models.py
src/medex/: __init__.py  __main__.py  config.py  main.py
src/medex/agent/: __init__.py  controller.py  models.py  planner.py  service.py  state.py
src/medex/api/: __init__.py  app.py  middleware.py  models.py  service.py  websocket.py
src/medex/api/routes/: __init__.py  admin.py  health.py  query.py  tools.py
src/medex/db/: __init__.py  cache.py  connection.py  models.py  repositories.py
src/medex/detection/: __init__.py  emergency.py  user_type.py
src/medex/knowledge/: __init__.py  medical_base.py  pharmaceutical.py
src/medex/llm/: __init__.py  models.py  parser.py  prompts.py  router.py  service.py  streaming.py
src/medex/medical/: __init__.py  formatter.py  models.py  reasoner.py  service.py  treatment.py  triage.py
src/medex/memory/: __init__.py  context_window.py  conversation_manager.py  patient_context.py  service.py  title_generator.py  token_counter.py
src/medex/observability/: __init__.py  health.py  logging.py  metrics.py  models.py  service.py  tracing.py
src/medex/providers/: __init__.py  base.py  huggingface.py  manager.py  moonshot.py
src/medex/rag/: __init__.py  chunker.py  embedder.py  models.py  reranker.py  service.py  vector_store.py
src/medex/security/: __init__.py  audit.py  models.py  pii.py  sanitizer.py  service.py
src/medex/tools/: __init__.py  executor.py  models.py  registry.py  service.py
src/medex/tools/medical/: __init__.py  dosage_calculator.py  drug_interactions.py  emergency_detector.py  lab_interpreter.py
src/medex/ui/: __init__.py
src/medex/vision/: __init__.py  analyzer.py
tests/: __init__.py  conftest.py  test_agent.py  test_api.py  test_api_v2.py  test_detection.py  test_differential_diagnosis.py  test_engine.py  test_i18n.py  test_infrastructure.py  test_integration_v2.py  test_knowledge.py  test_llm.py  test_medex_logger.py  test_medical.py  test_memory.py  test_observability.py  test_providers.py  test_rag.py  test_security.py  test_tools.py  test_tools_v2.py  test_vision.py
tests/e2e/: conftest.py  pytest.ini  test_api_e2e.py  test_ui_e2e.py
ui/: requirements.txt  run.py  rxconfig.py
ui/assets/: styles.css
ui/medex_ui/: __init__.py  app.py  design.py  medex_ui.py  pdf_export.py  scientific_search.py  state.py  web_search.py
ui/tests/: test_ui.py
