[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medex"
version = "1.0.0"
description = "Medical AI Intelligence System — dual-mode clinical consultation, emergency detection, RAG knowledge base, and multi-model LLM routing"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Gonzalo Romero", email = "deeprat.tec@gmail.com"}
]
maintainers = [
    {name = "Gonzalo Romero", email = "deeprat.tec@gmail.com"}
]
keywords = [
    "medical-ai",
    "healthcare",
    "rag",
    "llm",
    "clinical-decision-support",
    "emergency-detection",
    "medical-imaging",
    "fastapi",
    "huggingface"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "reflex>=0.5.0",
    "huggingface-hub>=0.20.0",
    "sentence-transformers>=2.2.0",
    "qdrant-client>=1.7.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "asyncpg>=0.29.0",
    "scikit-learn>=1.0.0",
    "numpy>=1.21.0",
    "Pillow>=8.3.0",
    "aiohttp>=3.8.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
full = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "opencv-python-headless>=4.5.0",
]

[project.urls]
Homepage = "https://github.com/DeepRatAI/MedX"
Documentation = "https://github.com/DeepRatAI/MedX#-documentation"
Repository = "https://github.com/DeepRatAI/MedX"
Issues = "https://github.com/DeepRatAI/MedX/issues"
Changelog = "https://github.com/DeepRatAI/MedX/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
medex = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
    | __pycache__
)/
'''

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "I001",   # import-sorting (handled by standalone isort in CI)
    "I002",   # missing-required-import (handled by standalone isort)
    "F821",   # undefined-name (legacy code, tracked in #2)
    "F841",   # unused-variable (legacy code, tracked in #2)
    "B007",   # unused-loop-control-variable
    "B905",   # zip-without-explicit-strict
    "E741",   # ambiguous-variable-name
    "B904",   # raise-without-from-inside-except
    "E712",   # true-false-comparison
    "B027",   # empty-method-without-abstract-decorator
    "C401",   # unnecessary-generator-set
]

[tool.ruff.lint.isort]
known-first-party = ["medex"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["medex"]
skip_gitignore = true

[tool.bandit]
exclude_dirs = ["tests", "scripts"]
# B101: assert used (test helper), B104: bind 0.0.0.0 (intentional for Docker containers)
skips = ["B101", "B104"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/medex"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
