[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medex"
version = "1.0.0"
description = "Medical AI Intelligence System powered by Kimi K2"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Gonzalo Romero", email = "gonzalorome6@gmail.com"}
]
maintainers = [
    {name = "Gonzalo Romero", email = "gonzalorome6@gmail.com"}
]
keywords = [
    "medical-ai",
    "healthcare",
    "rag",
    "kimi",
    "moonshot",
    "reflex",
    "clinical-decision-support"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.0.0",
    "numpy>=1.21.0",
    "Pillow>=8.3.0",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
full = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "opencv-python-headless>=4.5.0",
]

[project.urls]
Homepage = "https://github.com/DeepRatAI/Med-X-KimiK2-RAG"
Documentation = "https://github.com/DeepRatAI/Med-X-KimiK2-RAG#documentation"
Repository = "https://github.com/DeepRatAI/Med-X-KimiK2-RAG"
Issues = "https://github.com/DeepRatAI/Med-X-KimiK2-RAG/issues"
Changelog = "https://github.com/DeepRatAI/Med-X-KimiK2-RAG/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
medex = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
    | __pycache__
)/
'''

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["medex"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/medex"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
